feat: 智能长期记忆自动提取 — Dream.extractAndStore接入AgentLoop